// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GpuFieldCell > renders correctly when value is 0 1`] = `
<DocumentFragment>
  <div
    class="css-o1v3ip"
  >
    <p
      class="chakra-text css-0"
    >
      0
    </p>
  </div>
</DocumentFragment>
`;

exports[`GpuFieldCell > renders correctly when value is not 0 or undefined 1`] = `
<DocumentFragment>
  <div
    class="css-1kbur35"
  >
    <p
      class="chakra-text css-0"
    >
      1
    </p>
  </div>
</DocumentFragment>
`;

exports[`GpuFieldCell > renders correctly when value is undefined 1`] = `
<DocumentFragment>
  <div
    class="css-1kbur35"
  >
    <p
      class="chakra-text css-0"
    />
  </div>
</DocumentFragment>
`;
